--- a/hello-world-docker-action/action.yml
+++ b/hello-world-docker-action/action.yml
@@ -1,14 +1,15 @@
-name: Say Hello Action
-description: Say hello.
+name: 'Say Hello Action'
+description: 'Say hello.'
 inputs:
   who-to-greet:
-    description: Who to greet
+    description: 'Who to greet'
     required: true
-    default: world
+    default: 'world'
 outputs:
   time:
-    description: Time
+    description: 'Time'
 runs:
-  using: docker
-  image: Dockerfile
-  args: [ ${{ inputs.who-to-greet }} ]
+  using: 'docker'
+  image: 'Dockerfile'
+  args: 
+    - ${{ inputs.who-to-greet }}
