--- a/.github/workflows/hello-world-docker-ci.yml
+++ b/.github/workflows/hello-world-docker-ci.yml
@@ -11,6 +11,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3.3.0
       - name: Run Docker Action
+        id: hello-action
         uses: ./hello-world-docker-action
         with:
           who-to-greet: '@mitchell'
