--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
     inputs:
       environment:
-        description: "Environment"
+        description: 'Environment'
         type: environment
         required: true
 jobs:
@@ -27,14 +27,14 @@ jobs:
           tree
   Test:
     runs-on: ubuntu-latest
-    if: github.event_name == "workflow_dispatch"
+    if: github.event_name == 'workflow_dispatch'
     needs: Build
     environment: Test
     steps:
       - run: echo "Testing..."
   Load-Test:
     runs-on: ubuntu-latest
-    if: github.event_name == "workflow_dispatch"
+    if: github.event_name == 'workflow_dispatch'
     needs: Build
     environment: Load-Test
     steps:
